force-app/main/default/objects/Individual_Enrollment__c/Individual_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Unit/module enrollment for an individual.</description>
    <label>Individual Enrollment</label>
    <nameField>
        <displayFormat>IEN-{00000}</displayFormat>
        <label>Individual  Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>