force-app/main/default/objects/Individual_Enrollment__c/fields/Academic_Term_Id__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term_Id__c</fullName>
    <formula>CASESAFEID( Study_Offering__r.Academic_Term__c )</formula>
    <label>Academic Term Id</label>
    <type>Text</type>
</CustomField>