force-app/main/default/objects/Individual_Enrollment__c/fields/Attendance_Requirement_Met__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Requirement_Met__c</fullName>
    <label>Attendance Requirement Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>