force-app/main/default/objects/Individual_Enrollment__c/fields/Auto_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For audit purposes, this field will be updated by the Auto Enrollment job handler</description>
    <label>Auto Enrollment</label>
    <type>Checkbox</type>
</CustomField>