force-app/main/default/objects/Individual_Enrollment__c/fields/Best_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Best_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifier for the best attempt for the same study unit.</description>
    <inlineHelpText>Identifier for the best attempt for the same study unit.</inlineHelpText>
    <label>Best Attempt</label>
    <type>Checkbox</type>
</CustomField>