force-app/main/default/objects/Individual_Enrollment__c/fields/Bypass_Requirement_Met__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Requirement_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox to indicate the bypass requirement met for this enrollment.</inlineHelpText>
    <label>Bypass Requirement Met</label>
    <type>Checkbox</type>
</CustomField>