force-app/main/default/objects/Individual_Enrollment__c/fields/Credit_Transfer_Application__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transfer_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Transfer Application</label>
    <referenceTo>Credit_Transfer_Application__c</referenceTo>
    <relationshipLabel>Individual Enrollments</relationshipLabel>
    <relationshipName>Individual_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>