force-app/main/default/objects/Individual_Enrollment__c/fields/Credit_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transfer_Date__c</fullName>
    <label>Credit Transfer Date</label>
    <type>DateTime</type>
</CustomField>