force-app/main/default/objects/Individual_Enrollment__c/fields/Credit_Transfer_Historical_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transfer_Historical_Value__c</fullName>
    <label>Credit Transfer Historical Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>