force-app/main/default/objects/Individual_Enrollment__c/fields/Credit_Transfer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transfer_Notes__c</fullName>
    <label>Credit Transfer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>