force-app/main/default/objects/Individual_Enrollment__c/fields/Credit_Transfer_Received__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transfer_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Transfer Received</label>
    <type>Checkbox</type>
</CustomField>