force-app/main/default/objects/Individual_Enrollment__c/fields/Credit_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transfer_Type__c</fullName>
    <label>Credit Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Unit Recognition</fullName>
            </value>
            <value>
                <fullName>Credit Transfer Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>