force-app/main/default/objects/Individual_Enrollment__c/fields/Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Credits_Attempted__c</fullName>
    <label>Credits Attempted</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>