force-app/main/default/objects/Individual_Enrollment__c/fields/Credits_Offered__c.field-meta.xml
<CustomField>
    <fullName>Credits_Offered__c</fullName>
    <label>Credits Offered</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>