force-app/main/default/objects/Individual_Enrollment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date unit should be completed / expires. Used primarily for online self paced offerings</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>