force-app/main/default/objects/Individual_Enrollment__c/fields/EFTSL__c.field-meta.xml
<CustomField>
    <fullName>EFTSL__c</fullName>
    <label>EFTSL</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>