force-app/main/default/objects/Individual_Enrollment__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
                <default>true</default>
                <label>Program</label>
            </value>
            <value>
                <fullName>Continuing Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>