force-app/main/default/objects/Individual_Enrollment__c/fields/Exclude_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Credits_Earned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude/ignore the credits earned for the individual enrollment e.g., the Credits Earned won&apos;t be rollup to Individual Academic Progress.</description>
    <inlineHelpText>Exclude/ignore the credits earned for the individual enrollment e.g., the Credits Earned won&apos;t be rollup to Individual Academic Progress.</inlineHelpText>
    <label>Exclude Credits Earned</label>
    <type>Checkbox</type>
</CustomField>