force-app/main/default/objects/Individual_Enrollment__c/fields/Exclude_GPA_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_GPA_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude/ignore the individual enrollment from the GPA calculation e.g., the Quality Points and Credits Attempted won&apos;t be rollup to Individual Academic Progress.</description>
    <inlineHelpText>Exclude/ignore the individual enrollment from the GPA calculation e.g., the Quality Points and Credits Attempted won&apos;t be rollup to Individual Academic Progress.</inlineHelpText>
    <label>Exclude GPA Calculation</label>
    <type>Checkbox</type>
</CustomField>