force-app/main/default/objects/Individual_Enrollment__c/fields/Final_Numerical_Grade__c.field-meta.xml
<CustomField>
    <fullName>Final_Numerical_Grade__c</fullName>
    <formula>Numerical_Grade__c +  (IF(ISNULL(Numerical_Grade_Adjustment__c), 0, Numerical_Grade_Adjustment__c))</formula>
    <label>Final Numerical Grade</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>