force-app/main/default/objects/Individual_Enrollment__c/fields/Grade_Points__c.field-meta.xml
<CustomField>
    <fullName>Grade_Points__c</fullName>
    <label>Grade Points</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>