force-app/main/default/objects/Individual_Enrollment__c/fields/Grade_Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Grade_Release_Status__c</fullName>
    <label>Grade Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Released</fullName>
                <default>true</default>
                <label>Not Released</label>
            </value>
            <value>
                <fullName>Internal Release</fullName>
            </value>
            <value>
                <fullName>Internal Audit</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>