force-app/main/default/objects/Individual_Enrollment__c/fields/Grade_Result__c.field-meta.xml
<CustomField>
    <fullName>Grade_Result__c</fullName>
    <label>Grade Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade_Result</valueSetName>
    </valueSet>
</CustomField>