force-app/main/default/objects/Individual_Enrollment__c/fields/Historical_Term__c.field-meta.xml
<CustomField>
    <fullName>Historical_Term__c</fullName>
    <description>The historical term enrolled for the unit from legacy system.</description>
    <label>(Reserved) Historical Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>