force-app/main/default/objects/Individual_Enrollment__c/fields/Historical_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Historical_Unit_Code__c</fullName>
    <description>The historical Unit Code from legacy system.</description>
    <label>(Reserved) Historical Unit Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>