force-app/main/default/objects/Individual_Enrollment__c/fields/Historical_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Historical_Unit_Name__c</fullName>
    <description>The historical unit name from legacy system.</description>
    <label>(Reserved) Historical Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>