force-app/main/default/objects/Individual_Enrollment__c/fields/Individual_Academic_Progress__c.field-meta.xml
<CustomField>
    <fullName>Individual_Academic_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Academic Progress</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>Individual_Academic_Progress__c.Contact__c</valueField>
        </filterItems>
        <infoMessage>Please select an individual academic progress that belongs to the same contact.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Individual_Academic_Progress__c</referenceTo>
    <relationshipLabel>Individual Enrollments</relationshipLabel>
    <relationshipName>Individual_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>