force-app/main/default/objects/Individual_Enrollment__c/fields/Numerical_Grade__c.field-meta.xml
<CustomField>
    <fullName>Numerical_Grade__c</fullName>
    <label>Numerical Grade</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>