force-app/main/default/objects/Individual_Enrollment__c/fields/Numerical_Grade_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Numerical_Grade_Adjustment__c</fullName>
    <label>Numerical Grade Adjustment</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>