force-app/main/default/objects/Individual_Enrollment__c/fields/Quality_Points__c.field-meta.xml
<CustomField>
    <fullName>Quality_Points__c</fullName>
    <formula>Credits_Attempted__c  *  Grade_Points__c</formula>
    <label>Quality Points</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>