force-app/main/default/objects/Individual_Enrollment__c/fields/Skip_Completion_Engine__c.field-meta.xml
<CustomField>
    <fullName>Skip_Completion_Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The completion engine will be skipped when this field is selected.</description>
    <inlineHelpText>The completion engine will be skipped when this field is selected.</inlineHelpText>
    <label>Skip Completion Engine</label>
    <type>Checkbox</type>
</CustomField>