force-app/main/default/objects/Individual_Enrollment__c/fields/Study_Grade_Setting__c.field-meta.xml
<CustomField>
    <fullName>Study_Grade_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Grade Setting</label>
    <referenceTo>Study_Grade_Setting__c</referenceTo>
    <relationshipLabel>Individual Enrollments</relationshipLabel>
    <relationshipName>Individual_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>