force-app/main/default/objects/Individual_Enrollment__c/fields/Study_Session_Enrollment_Rule_Result__c.field-meta.xml
<CustomField>
    <fullName>Study_Session_Enrollment_Rule_Result__c</fullName>
    <description>Track number of study sessions enrolled for each study session type separated by semi-colon. For example: Lecture=1;Tutorial=1</description>
    <inlineHelpText>Track number of study sessions enrolled for each study session type separated by semi-colon. For example: Lecture=1;Tutorial=1</inlineHelpText>
    <label>Study Session Enrollment Rules Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>