force-app/main/default/objects/Individual_Enrollment__c/fields/Study_Session_Enrollment_Rule_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Session_Enrollment_Rule_Status__c</fullName>
    <label>Study Session Enrollment Rules Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient</fullName>
            </value>
            <value>
                <fullName>Sufficient</fullName>
            </value>
            <value>
                <fullName>Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>