force-app/main/default/objects/Individual_Enrollment__c/fields/Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alternate field to define the study unit for the individual enrollment if there is no study offering. This is used by credit transfer application and placeholder enrollment.</description>
    <label>Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Individual Enrollments</relationshipLabel>
    <relationshipName>Individual_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>