force-app/main/default/objects/Individual_Enrollment__c/fields/Target_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Unit_Id__c</fullName>
    <formula>IF(
	NOT(ISBLANK(Study_Offering__c)),
	CASESAFEID( Study_Offering__r.Study_Unit__c ),
	CASESAFEID( Study_Unit__c )
)</formula>
    <label>Target Unit Id</label>
    <type>Text</type>
</CustomField>