force-app/main/default/objects/Individual_Enrollment__c/fields/Waitlist_Date__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Date__c</fullName>
    <description>Updates automatically whenever Enrollment Status is changed to &quot;Enrollment Requested&quot; or &quot;Waitlisted&quot;</description>
    <label>Waitlist Date</label>
    <type>DateTime</type>
</CustomField>