force-app/main/default/objects/Individual_Enrollment__c/recordTypes/Faculty.recordType-meta.xml
<RecordType>
    <fullName>Faculty</fullName>
    <active>true</active>
    <description>Faculty assignment</description>
    <label>Faculty</label>
</RecordType>