force-app/main/default/objects/Individual_Enrollment__c/validationRules/Required_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Contact</fullName>
    <active>true</active>
    <description>To ensure contact is populated.</description>
    <errorConditionFormula>ISBLANK(Contact__c)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>The contact is required.</errorMessage>
</ValidationRule>