force-app/main/default/objects/Individual_Enrollment__c/validationRules/Required_Individual_Academic_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Individual_Academic_Profile</fullName>
    <active>true</active>
    <description>To ensure that the individual enrollment has an individual academic profile selected.</description>
    <errorConditionFormula>AND(
    ISBLANK(Individual_Academic_Profile__c),
    $RecordType.DeveloperName = &quot;Student&quot;
)</errorConditionFormula>
    <errorDisplayField>Individual_Academic_Profile__c</errorDisplayField>
    <errorMessage>The Individual Academic Profile is required.</errorMessage>
</ValidationRule>